[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edu-toolkit"
description = "edu-toolkit: An Open-Source Framework for Education Language Data"
authors = [{name = "Rose E. Wang", email = "rewang@cs.stanford.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version" "description"]
requires-python = ">= 3.8"

[project.urls]
Documentation = "https://edu-toolkit.readthedocs.io/en/latest/index.html#"
Repository = "https://github.com/rosewang2008/edu-toolkit/"
